--- a/accordion.css
+++ b/accordion.css
@@ -1,9 +1,3 @@
-/* body {
-	background-color: #6DC4F4;
-}h1 { 
-     color:white;
- 
-} */
 
 .container {
   width: 80%;
@@ -14,14 +8,14 @@
 button.accordion {
   width: 100%;
   background-color: whitesmoke;
-  border: none;
+  border: 5px solid #ccc;         //    Added solid border for user clarity
   outline: none;
   text-align: left;
   padding: 15px 20px;
   font-size: 18px;
   color: #333;
   cursor: pointer;
-  transition: background-color 0.2s linear;
+  transition: background-color 0.2s ease-in-out; 
 }
 
 button.accordion:after {
@@ -41,10 +35,16 @@ button.accordion.is-open {
   background-color: #ddd;
 }
 
+button.accordion:focus-visible {
+  border-top: 1px solid #333;       // Changed to darker grey for highlight and visual difference
+  border-bottom: 1px solid #333;    // Changed to darker grey for highlight
+}
+
 .accordion-content {
   background-color: white;
-  border-left: 1px solid whitesmoke;
-  border-right: 1px solid whitesmoke;
+  border-left: 5px solid whitesmoke;
+  border-right: 5px solid whitesmoke;
+  border-top: 5px solid #ddd;       //Top border for content separation
   padding: 0 20px;
   max-height: 0;
   overflow: hidden;
